objects/Mass_Price_Update__c/Mass_Price_Update__c.object-meta.xml
<CustomObject>
    <label>Mass Price Update</label>
    <nameField>
        <displayFormat>MPU-{0000}</displayFormat>
        <label>Mass Price Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Price Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>