objects/Mass_Price_Update__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mass Price Updates</relationshipLabel>
    <relationshipName>Mass_Price_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>