objects/Mass_Price_Update__c/fields/Auto_Approval__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Approval</label>
    <type>Checkbox</type>
</CustomField>