objects/Mass_Price_Update__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To Geo</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Mass Price Updates</relationshipLabel>
    <relationshipName>Mass_Price_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>