objects/Mass_Price_Update__c/fields/Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Classification__c</fullName>
    <label>Customer Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Classification</valueSetName>
    </valueSet>
</CustomField>