objects/Mass_Price_Update__c/fields/MPU_Name__c.field-meta.xml
<CustomField>
    <fullName>MPU_Name__c</fullName>
    <label>MPU Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>