objects/Mass_Price_Update__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Mass Price Updates</relationshipLabel>
    <relationshipName>Mass_Price_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>