objects/Mass_Price_Update__c/validationRules/Effective_From_Date_Null_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_From_Date_Null_Check</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Effective_From__c &lt; TODAY(), ISNULL(Effective_From__c))</errorConditionFormula>
    <errorDisplayField>Effective_From__c</errorDisplayField>
    <errorMessage>Effective From cannot be null or Date before Current Date.</errorMessage>
</ValidationRule>