objects/Mass_Price_Update__c/validationRules/ExpirationDateNullCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpirationDateNullCheck</fullName>
    <active>false</active>
    <errorConditionFormula>OR( Effective_To__c &lt; TODAY(), ISNULL(Effective_To__c ))</errorConditionFormula>
    <errorDisplayField>Effective_To__c</errorDisplayField>
    <errorMessage>Effective To cannot be null or Date before Current Date.</errorMessage>
</ValidationRule>