objects/Mass_Price_Update__c/listViews/MPU_View.listView-meta.xml
<ListView>
    <fullName>MPU_View</fullName>
    <columns>NAME</columns>
    <columns>MPU_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Product__c</columns>
    <columns>Effective_To__c</columns>
    <filterScope>Mine</filterScope>
    <label>MPU View</label>
</ListView>